Fixing alignment

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -74,7 +74,7 @@ img {
 
 @media (prefers-color-scheme: dark) {
   .only-on-dark {
-    display: block;
+    display: inline;
   }
 
   .only-on-light {
