--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -36,6 +36,7 @@
   border: 1px solid $border-color-01;
   border-radius: 5px;
   text-align: right;
+  align-content: center;
 
   .nav-trigger {
     display: none;
